Changed layout, put input, list and items in seperate components

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Keeper App</title>
-    <link
+  <head>    
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <title>Grocerylist</title>
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
+    /> -->
+    <link rel="stylesheet" href="stylesbackup.css" />
   </head>
 
   <body>
